Change entity property case
